# herwig_nf_sampler

./: .gitignore  BinSampler.cc  BinSampler.h  DiagramSampler.h  GeneralSampler.cc  GeneralSampler.h  Makefile.am  PythonSampler.cc  PythonSampler.h  clean.sh  herwig-mergegrids  install.sh  install_ubuntu.sh  readme.md
DataAnalysis/: integral_convergence.ipynb
DataAnalysis/data/LEP/u ubar g g/diagram/: histogram_output.csv
DataAnalysis/data/LEP/u ubar g g/flatsampler/: data.csv  histogram_output.csv
DataAnalysis/data/LEP/u ubar g g/flatsampler OLD/: histogram_output.csv
DataAnalysis/data/LEP/u ubar g g/monaco sampler OLD/: histogram_output.csv
DataAnalysis/data/LEP/u ubar g g/standard sampler/: histogram_output.csv
DataAnalysis/data/LEP/u ubar g/diagram/: histogram_output.csv
DataAnalysis/data/LEP/u ubar g/flatsampler/: histogram_output.csv
DataAnalysis/data/LEP/u ubar g/monaco/: histogram_output.csv
DataAnalysis/data/LEP/u ubar g/standard sampler/: histogram_output.csv
DataAnalysis/data/LHC/e+ e- g STANDARD/: histogram_output.csv
DataAnalysis/data/LHC/u ubar -> e+ e- g g/diagram/: histogram_output.csv
DataAnalysis/data/LHC/u ubar -> e+ e- g g/monaco/: histogram_output.csv
DataAnalysis/data/LHC/u ubar -> e+ e- g g/monaco SLOW?/: histogram_output.csv
DataAnalysis/data/LHC/u ubar -> e+ e- g g/standard sampler SLOW?/: histogram_output.csv
DataAnalysis/output/: data.txt
DiagramSampler/: DiagramSampler.cc  Makefile.am  SingleSampler.cc  SingleSampler.h
HerwigPythonSampler/: AbstractSampler.py  AnalyzeRuns.py  Base.py  Dataset.py  FlowSampler.py  FlowTrainer.py  MadnisFlow.py  Sampler.py  sampling.py  settings.py
HerwigPythonSampler/nn/: flow.py  readme.md
python/: base.py  flat.py  nf.py  nf_old.py  sampling.py  vg.py
(+12 files in other folders)
